@@ -54,14 +54,14 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
     }
 
     protected AccessControlProfile(String rawName, String code, String customExpression, String customExpressionValidator,
-            Boolean restricted, Boolean locked, String objectsClass, String objectsProviderStrategy) {
+            Boolean restricted, Boolean system, String objectsClass, String objectsProviderStrategy) {
         this();
         setRawName(rawName);
         setCode(code);
         setCustomExpression(customExpression);
         setCustomExpressionValidator(customExpressionValidator);
         setRestricted(restricted);
-        setLocked(locked);
+        setSystem(system);
         setObjectsClass(objectsClass);
         setObjectsProviderStrategy(objectsProviderStrategy);
         checkRules();
@@ -69,14 +69,14 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
     }
 
     protected AccessControlProfile(String rawName, String customExpression, String customExpressionValidator, Boolean restricted,
-            Boolean locked, String objectsClass, String objectsProviderStrategy) {
+            Boolean system, String objectsClass, String objectsProviderStrategy) {
         this();
         setRawName(rawName);
         setCode(UUID.randomUUID().toString());
         setCustomExpression(customExpression);
         setCustomExpressionValidator(customExpressionValidator);
         setRestricted(restricted);
-        setLocked(locked);
+        setSystem(system);
         setObjectsClass(objectsClass);
         setObjectsProviderStrategy(objectsProviderStrategy);
         checkRules();
@@ -84,15 +84,15 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
     }
 
     public static AccessControlProfile create(String rawName, String code, String customExpression,
-            String customExpressionValidator, Boolean restricted, Boolean locked, String objectsClass,
+            String customExpressionValidator, Boolean restricted, Boolean system, String objectsClass,
             String objectsProviderStrategy) {
         if (code == null) {
-            return new AccessControlProfile(rawName, customExpression, customExpressionValidator, restricted, locked,
+            return new AccessControlProfile(rawName, customExpression, customExpressionValidator, restricted, system,
                     objectsClass, objectsProviderStrategy);
         } else if (findByCode(code) != null) {
             throw new IllegalArgumentException(AccessControlBundle.get("error.AccessControlProfile.code.exists", code));
         }
-        return new AccessControlProfile(rawName, code, customExpression, customExpressionValidator, restricted, locked,
+        return new AccessControlProfile(rawName, code, customExpression, customExpressionValidator, restricted, system,
                 objectsClass, objectsProviderStrategy);
     }
 
@@ -113,7 +113,7 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
             throw new IllegalStateException(AccessControlBundle.get("error.AccessControlProfile.manager.required"));
         }
 
-        if (getLocked() == null) {
+        if (getSystem() == null) {
             throw new IllegalStateException(AccessControlBundle.get("error.AccessControlProfile.manager.required"));
         }
 
@@ -153,8 +153,33 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         return getRestricted();
     }
 
+    // @Deprecated Boolean isLocked() will be replaced by Boolean isSystem()
+    @Deprecated
     public Boolean isLocked() {
-        return getLocked();
+        return getSystem();
+    }
+
+    public Boolean isSystem() {
+        return getSystem();
+    }
+
+    // @Deprecated Boolean getLocked() will be replaced by Boolean getSystem()
+    @Deprecated
+    @Override
+    public Boolean getLocked() {
+        return Optional.ofNullable(getSystem()).orElseGet(() -> super.getLocked());
+    }
+
+    // @Deprecated void setLocked(Boolean locked) will be replaced by void setSystem(Boolean system)
+    @Deprecated
+    @Override
+    public void setLocked(Boolean locked) {
+        if (locked == null) {
+            super.setLocked(null);
+            return;
+        }
+
+        setSystem(locked);
     }
 
     public boolean isAutoGenerated() {
@@ -409,7 +434,7 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
 
     @pt.ist.fenixframework.Atomic
     public void delete() {
-        if (isLocked()) {
+        if (isSystem()) {
             throw new IllegalStateException(AccessControlBundle.get("error.AccessControlProfile.delete.protected"));
         }
         if (!getParentSet().isEmpty()) {
